<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="se.liu.ida.hanal086.hannes.shopassistant.MainActivity">

    <RelativeLayout
        android:id="@+id/main_loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/main_signInButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/defaultLoginButtonHeight"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_loggedInLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" >

        <TextView
            android:id="@+id/main_currentUserLabel"
            android:layout_width="@dimen/screenHalfWidth"
            android:layout_height="@dimen/defaultSmallButtonHeight"
            android:text="@string/main_currentUserLabel"
            android:textSize="@dimen/defaultButtonTextSize" />

        <Button
            android:id="@+id/main_signOutButton"
            android:layout_width="@dimen/screenHalfWidth"
            android:layout_height="@dimen/defaultSmallButtonHeight"
            android:layout_below="@+id/main_currentLoggedInUser"
            android:text="@string/main_signOutButton" />

        <Button
            android:text="@string/main_settingsButton"
            android:id="@+id/main_settingsButton"
            android:layout_width="@dimen/screenHalfWidth"
            android:layout_height="@dimen/defaultSmallButtonHeight"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/defaultButtonTextSize" />

        <Button
            android:text="@string/main_aboutButton"
            android:layout_height="@dimen/defaultSmallButtonHeight"
            android:id="@+id/main_aboutButton"
            android:layout_width="@dimen/screenHalfWidth"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/defaultButtonTextSize" />

        <Button
            android:text="@string/main_shopListButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/defaultMediumButtonHeight"
            android:id="@+id/main_shopListButton"
            android:layout_marginBottom="10dp"
            android:layout_above="@id/main_settingsButton"
            android:textAllCaps="false"
            android:textSize="@dimen/defaultButtonTextSize" />

        <TextView
            android:id="@+id/main_currentLoggedInUser"
            android:layout_width="@dimen/screenHalfWidth"
            android:layout_height="@dimen/defaultSmallButtonHeight"
            android:text="@string/main_currentLoggedInUserDefaultText"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/main_currentUserLabel"
            android:textSize="@dimen/defaultButtonTextSize" />

        <Button
            android:text="@string/main_savePosButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/main_savePosButton"
            android:layout_height="@dimen/defaultMediumButtonHeight"
            android:textAllCaps="false"
            android:textSize="@dimen/defaultButtonTextSize"
            android:layout_above="@+id/main_shopListButton"
            android:layout_alignParentStart="true" />

        <RelativeLayout
            android:id="@+id/main_compassLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/main_signOutButton"
            android:layout_above="@+id/main_savePosButton">

            <ImageView
                android:id="@+id/main_compassNeedleImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/compass_needle" />

            <TextView
                android:id="@+id/main_compassNotActivated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/main_compassNotActivated"
                android:gravity="center"
                android:background="#CCCCCC"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>
